# udacity-agentic-ai-langchain-langgraph

module-01-langchain-fundamentals/doc_assistant_project/: .gitignore  README.md  pyproject.toml
module-01-langchain-fundamentals/doc_assistant_project/docs/: AGENTIC_DESIGN_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_LESSONS.md  CURRENT_BEHAVIOR.md  DATA_MODEL.md  EVAL_AND_TEST_STRATEGY.md  IMPLEMENTATION_DECISIONS_AND_EXAMPLES.md  IMPLEMENTATION_ROADMAP.md  LANGGRAPH_DESIGN.md  REPO_AUDIT.md  RISK_REVIEW.md  SPEC.md
module-01-langchain-fundamentals/doc_assistant_project/docs/adrs/: ADR-001-langgraph-need.md  ADR-002-retrieval-architecture.md  ADR-003-deterministic-calculation.md  ADR-004-mandatory-citations.md  ADR-006-human-in-the-loop.md  (+2 more)
module-01-langchain-fundamentals/doc_assistant_project/logs/: tool_usage_20260621_094135.json
module-01-langchain-fundamentals/doc_assistant_project/sessions/: 6a9dba93-bfb0-4cf8-8a83-a7e5288ea03e.json
module-01-langchain-fundamentals/doc_assistant_project/src/: agent.py  assistant.py  prompts.py  schemas.py  tools.py
module-02-langgraph-agents/: .gitignore  main.py  pyproject.toml
module-02-langgraph-agents/ecohome_solution/: 02_rag_setup.ipynb  03_run_and_evaluate.ipynb  tools.py
module-02-langgraph-agents/ecohome_starter/: 01_db_setup.ipynb  02_rag_setup.ipynb  agent.py
module-03-advanced-agentic-ai/: .gitignore  main.py  pyproject.toml
module-03-advanced-agentic-ai/solution/: 01_external_db_setup.ipynb  02_core_db_setup.ipynb
module-03-advanced-agentic-ai/solution/agentic/: state.py  workflow.py
module-03-advanced-agentic-ai/solution/tests/: __init__.py  test_lane_a.py  test_lane_b.py
(+14 files in other folders)
