[project]
name = "module-03-advanced-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langgraph-supervisor>=0.0.31",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
