[project]
name = "doc-assistant-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "openai>=2.43.0",
    "print-color>=0.4.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
